<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="added_word">%s : Saved</string>
    <string name="alternates_for_a">áàâãäåāæ</string>
    <string name="alternates_for_a_umlaut" />
    <string name="alternates_for_ae" />
    <string name="alternates_for_b" />
    <string name="alternates_for_c">çčć¢</string>
    <string name="alternates_for_cyrillic_e" />
    <string name="alternates_for_cyrillic_soft_sign" />
    <string name="alternates_for_d">đ</string>
    <string name="alternates_for_e">3éèêëē€</string>
    <string name="alternates_for_f">₣</string>
    <string name="alternates_for_g" />
    <string name="alternates_for_h" />
    <string name="alternates_for_i">8íìîïī</string>
    <string name="alternates_for_j" />
    <string name="alternates_for_k" />
    <string name="alternates_for_l">£₤λ</string>
    <string name="alternates_for_m">μ</string>
    <string name="alternates_for_n">ñ</string>
    <string name="alternates_for_o">9óòôõöōø</string>
    <string name="alternates_for_o_umlaut" />
    <string name="alternates_for_oe" />
    <string name="alternates_for_p">0π₱</string>
    <string name="alternates_for_q">1</string>
    <string name="alternates_for_r">4</string>
    <string name="alternates_for_s">§ßš</string>
    <string name="alternates_for_t">5</string>
    <string name="alternates_for_u">7úùûüū</string>
    <string name="alternates_for_v" />
    <string name="alternates_for_w">2</string>
    <string name="alternates_for_x" />
    <string name="alternates_for_y">6ýÿ¥</string>
    <string name="alternates_for_z">ž</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the start of a sentence</string>
    <string name="auto_complete">Auto-complete</string>
    <string name="auto_complete_dialog_title">Auto completion</string>
    <string name="auto_complete_summary">Spacebar and punctuation automatically insert highlighted word</string>
    <string name="auto_correction">Word suggestions</string>
    <string name="auto_correction_summary">Automatically correct the previous word</string>
    <string name="auto_punctuate">Auto-punctuate</string>
    <string name="auto_punctuate_summary" />
    <string name="auto_submit">Auto submit after voice</string>
    <string name="auto_version">custom</string>
    <string name="default_chording_alt_key">0</string>
    <string name="default_chording_ctrl_key">0</string>
    <string name="default_chording_meta_key">0</string>
    <string name="default_click_method">0</string>
    <string name="default_click_volume">0.2</string>
    <string name="default_ctrl_a_override">0</string>
    <string name="default_height_landscape">55%</string>
    <string name="default_height_portrait">35%</string>
    <string name="default_hint_mode">1</string>
    <string name="default_keyboard_mode_landscape">2</string>
    <string name="default_keyboard_mode_portrait">0</string>
    <string name="default_long_press_duration">400 ms</string>
    <string name="default_popup_content">1</string>
    <string name="default_render_mode">1</string>
    <string name="default_swipe_down">close</string>
    <string name="default_swipe_left">none</string>
    <string name="default_swipe_right">none</string>
    <string name="default_swipe_up">extension</string>
    <string name="default_vol_down">none</string>
    <string name="default_vol_up">none</string>
    <string name="english_ime_settings">"Settings for Hacker's Keyboard"</string>
    <string name="keyboard_layout">Keyboard Theme</string>
    <string name="language_selection_summary">Slide finger on spacebar to change language</string>
    <string name="language_selection_title">Input languages</string>
    <string name="main_setup_configure_imes">Enable keyboard</string>
    <string name="main_setup_get_dicts">More</string>
    <string name="main_setup_input_lang">Input languages</string>
    <string name="main_setup_set_ime">Set input method</string>
    <string name="main_setup_settings">Settings</string>
    <string name="main_setup_test">Test</string>
    <string name="popup_on_keypress">Popup on keypress</string>
    <string name="prediction_category">Word suggestion settings</string>
    <string name="pref_screen_actions_title">Gesture and key actions</string>
    <string name="pref_screen_feedback_title">Key feedback settings</string>
    <string name="pref_screen_view_title">Theme and label settings</string>
    <string name="prefs_enable_recorrection">Touch to correct words</string>
    <string name="prefs_enable_recorrection_summary">Touch entered words to correct them</string>
    <string name="prefs_settings_key">Show settings key</string>
    <string name="quick_fixes">Quick fixes</string>
    <string name="quick_fixes_summary">Corrects commonly typed mistakes</string>
    <string name="settings_key_mode_auto">0</string>
    <string name="show_suggestions">Show suggestions</string>
    <string name="show_suggestions_summary">Display suggested words while typing</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="suggested_punctuations">"!?,\"':;()-/@_"</string>
    <string name="summary_caps_lock_false">Shift Lock (q1 => Q!)</string>
    <string name="summary_caps_lock_true">Caps Lock (q1 => Q1)</string>
    <string name="summary_connectbot_tab_hack_false">Send plain Tab key event</string>
    <string name="summary_connectbot_tab_hack_true">Enable compatibility workaround</string>
    <string name="summary_force_keyboard_on_false">When no hardware keyboard is available</string>
    <string name="summary_force_keyboard_on_true">Always</string>
    <string name="summary_fullscreen_override_false">Enabled on small devices</string>
    <string name="summary_fullscreen_override_true">Disabled, use standard view</string>
    <string name="summary_keyboard_notification_false">No notification</string>
    <string name="summary_keyboard_notification_true">Activate the keyboard by tapping the notification</string>
    <string name="summary_shift_lock_modifiers_false">No, normal keys only</string>
    <string name="summary_shift_lock_modifiers_true">Yes, including arrow keys</string>
    <string name="summary_suggestions_in_landscape_false">Hide suggestions in landscape mode</string>
    <string name="summary_suggestions_in_landscape_true">Same as in portrait mode</string>
    <string name="summary_touch_pos_false">Off</string>
    <string name="summary_touch_pos_true">Show feedback for touch screen location</string>
    <string name="title_application_category">Application-specific settings</string>
    <string name="title_candidate_scale">Suggestion label scaling</string>
    <string name="title_caps_lock">Double-tap Shift mode</string>
    <string name="title_chording_alt_key">Alt key code</string>
    <string name="title_chording_ctrl_key">Ctrl key code</string>
    <string name="title_chording_meta_key">Meta key code</string>
    <string name="title_click_method">Click volume control method</string>
    <string name="title_click_volume">Key click volume</string>
    <string name="title_connectbot_tab_hack">ConnectBot tab key mode</string>
    <string name="title_ctrl_a_override">Ctrl-A (select all) override</string>
    <string name="title_debugging">Debugging</string>
    <string name="title_force_keyboard_on">Show soft keyboard</string>
    <string name="title_fullscreen_override">Landscape mode fullscreen editor</string>
    <string name="title_hardware_key_actions">Hardware key actions</string>
    <string name="title_hint_mode">Labeled alternate keys</string>
    <string name="title_input_connection_details">Input connection details</string>
    <string name="title_input_mode_settings">Input mode settings</string>
    <string name="title_key_behavior_settings">Key behavior settings</string>
    <string name="title_key_layout_options">Key layout options</string>
    <string name="title_keyboard_height_landscape">Keyboard height, landscape</string>
    <string name="title_keyboard_height_portrait">Keyboard height, portrait</string>
    <string name="title_keyboard_mode_landscape">Keyboard mode, landscape</string>
    <string name="title_keyboard_mode_portrait">Keyboard mode, portrait</string>
    <string name="title_keyboard_notification">Use permanent notification</string>
    <string name="title_keyboard_view_settings">Keyboard view settings</string>
    <string name="title_label_scale">Key label scaling</string>
    <string name="title_long_press_alternate_keys">Long-press alternate keys</string>
    <string name="title_long_press_duration">Long-press duration</string>
    <string name="title_popup_content">Popup mini-keyboard contents</string>
    <string name="title_render_mode">Drawing method</string>
    <string name="title_shift_lock_modifiers">Apply Shift Lock to modifier keys?</string>
    <string name="title_slide_keys">Sliding key events</string>
    <string name="title_suggested_punctuation">Suggested punctuation</string>
    <string name="title_suggestions_in_landscape">Suggestions in landscape mode</string>
    <string name="title_swipe_down">Swipe down</string>
    <string name="title_swipe_gestures">Swipe gestures (experimental)</string>
    <string name="title_swipe_left">Swipe left</string>
    <string name="title_swipe_right">Swipe right</string>
    <string name="title_swipe_up">Swipe up</string>
    <string name="title_top_row_scale">5th row height adjustment</string>
    <string name="title_touch_pos">Debug touch screen position</string>
    <string name="title_version">Version</string>
    <string name="title_vibrate_len">Vibrate duration</string>
    <string name="title_vol_down">Volume down</string>
    <string name="title_vol_up">Volume up</string>
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="voice_input">Voice input</string>
    <string name="voice_mode_symbols">1</string>
</resources>