<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/english_ime_settings" android:key="english_ime_settings"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:hk="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/title_keyboard_view_settings" android:key="graphics_settings">
        <org.pocketworkstation.pckeyboard.SeekBarPreferenceString android:persistent="true" android:title="@string/title_keyboard_height_portrait" android:key="settings_height_portrait" android:defaultValue="@string/default_height_portrait" hk:displayFormat="%.0f%%" hk:maxValue="75.0" hk:minValue="15.0" hk:step="1.0" />
        <org.pocketworkstation.pckeyboard.SeekBarPreferenceString android:persistent="true" android:title="@string/title_keyboard_height_landscape" android:key="settings_height_landscape" android:defaultValue="@string/default_height_landscape" hk:displayFormat="%.0f%%" hk:maxValue="75.0" hk:minValue="15.0" hk:step="1.0" />
        <org.pocketworkstation.pckeyboard.AutoSummaryListPreference android:persistent="true" android:entries="@array/keyboard_mode_entries" android:title="@string/title_keyboard_mode_portrait" android:key="pref_keyboard_mode_portrait" android:defaultValue="@string/default_keyboard_mode_portrait" android:entryValues="@array/keyboard_mode_values" />
        <org.pocketworkstation.pckeyboard.AutoSummaryListPreference android:persistent="true" android:entries="@array/keyboard_mode_entries" android:title="@string/title_keyboard_mode_landscape" android:key="pref_keyboard_mode_landscape" android:defaultValue="@string/default_keyboard_mode_landscape" android:entryValues="@array/keyboard_mode_values" />
        <CheckBoxPreference android:persistent="true" android:title="@string/title_suggestions_in_landscape" android:key="suggestions_in_landscape" android:defaultValue="@bool/default_suggestions_in_landscape" android:summaryOn="@string/summary_suggestions_in_landscape_true" android:summaryOff="@string/summary_suggestions_in_landscape_false" />
        <PreferenceScreen android:title="@string/pref_screen_view_title" android:summary="Configure theming and label display">
            <intent android:action="org.pocketworkstation.pckeyboard.PREFS_VIEW" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_key_layout_options" android:key="layout_settings">
        <ListPreference android:persistent="true" android:entries="@array/settings_key_modes" android:title="@string/prefs_settings_key" android:key="settings_key" android:defaultValue="@string/settings_key_mode_auto" android:entryValues="@array/settings_key_modes_values" />
        <ListPreference android:persistent="true" android:entries="@array/voice_input_modes" android:title="@string/voice_input" android:key="voice_mode" android:defaultValue="@string/voice_mode_symbols" android:entryValues="@array/voice_input_modes_values" />
        <PreferenceScreen android:title="@string/language_selection_title" android:summary="@string/language_selection_summary">
            <intent android:action="org.pocketworkstation.pckeyboard.INPUT_LANGUAGE_SELECTION" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_key_behavior_settings" android:key="key_settings">
        <CheckBoxPreference android:persistent="true" android:title="@string/auto_cap" android:key="auto_cap" android:defaultValue="@bool/default_auto_cap" />
        <CheckBoxPreference android:persistent="true" android:title="@string/title_caps_lock" android:key="pref_caps_lock" android:defaultValue="@bool/default_caps_lock" android:summaryOn="@string/summary_caps_lock_true" android:summaryOff="@string/summary_caps_lock_false" />
        <CheckBoxPreference android:persistent="true" android:title="@string/title_shift_lock_modifiers" android:key="pref_shift_lock_modifiers" android:defaultValue="@bool/default_shift_lock_modifiers" android:summaryOn="@string/summary_shift_lock_modifiers_true" android:summaryOff="@string/summary_shift_lock_modifiers_false" />
        <PreferenceScreen android:title="@string/pref_screen_feedback_title" android:summary="Configure key sound, vibrate, preview popup etc.">
            <intent android:action="org.pocketworkstation.pckeyboard.PREFS_FEEDBACK" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/pref_screen_actions_title" android:summary="Configure actions for swipe gestures and hardware keys">
            <intent android:action="org.pocketworkstation.pckeyboard.PREFS_ACTIONS" />
        </PreferenceScreen>
        <org.pocketworkstation.pckeyboard.AutoSummaryListPreference android:persistent="true" android:entries="@array/ctrl_a_override_entries" android:title="@string/title_ctrl_a_override" android:key="pref_ctrl_a_override" android:defaultValue="@string/default_ctrl_a_override" android:entryValues="@array/ctrl_a_override_values" />
        <org.pocketworkstation.pckeyboard.AutoSummaryListPreference android:persistent="true" android:entries="@array/chording_ctrl_key_entries" android:title="@string/title_chording_ctrl_key" android:key="pref_chording_ctrl_key" android:defaultValue="@string/default_chording_ctrl_key" android:entryValues="@array/chording_ctrl_key_values" />
        <org.pocketworkstation.pckeyboard.AutoSummaryListPreference android:persistent="true" android:entries="@array/chording_alt_key_entries" android:title="@string/title_chording_alt_key" android:key="pref_chording_alt_key" android:defaultValue="@string/default_chording_alt_key" android:entryValues="@array/chording_alt_key_values" />
        <org.pocketworkstation.pckeyboard.AutoSummaryListPreference android:persistent="true" android:entries="@array/chording_meta_key_entries" android:title="@string/title_chording_meta_key" android:key="pref_chording_meta_key" android:defaultValue="@string/default_chording_meta_key" android:entryValues="@array/chording_meta_key_values" />
        <org.pocketworkstation.pckeyboard.AutoSummaryListPreference android:persistent="true" android:entries="@array/slide_keys_entries" android:title="@string/title_slide_keys" android:key="pref_slide_keys_int" android:defaultValue="0" android:entryValues="@array/slide_keys_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_long_press_alternate_keys" android:key="altchar_settings">
        <org.pocketworkstation.pckeyboard.AutoSummaryListPreference android:persistent="true" android:entries="@array/popup_content_entries" android:title="@string/title_popup_content" android:key="pref_popup_content" android:defaultValue="@string/default_popup_content" android:entryValues="@array/popup_content_values" />
        <org.pocketworkstation.pckeyboard.SeekBarPreferenceString android:persistent="true" android:title="@string/title_long_press_duration" android:key="pref_long_press_duration" android:defaultValue="@string/default_long_press_duration" hk:displayFormat="%.0f ms" hk:logScale="true" hk:maxValue="2000.0" hk:minValue="100.0" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prediction_category" android:key="prediction_settings">
        <CheckBoxPreference android:persistent="true" android:title="@string/quick_fixes" android:key="quick_fixes" android:summary="@string/quick_fixes_summary" android:defaultValue="@bool/default_quick_fixes" />
        <CheckBoxPreference android:persistent="true" android:title="@string/show_suggestions" android:key="show_suggestions" android:summary="@string/show_suggestions_summary" android:defaultValue="@bool/default_suggestions" />
        <CheckBoxPreference android:persistent="true" android:title="@string/auto_complete" android:key="auto_complete" android:summary="@string/auto_complete_summary" android:dependency="show_suggestions" android:defaultValue="@bool/enable_autocorrect" />
        <org.pocketworkstation.pckeyboard.AutoSummaryEditTextPreference android:title="@string/title_suggested_punctuation" android:key="pref_suggested_punctuation" android:defaultValue="@string/suggested_punctuations" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_input_mode_settings" android:key="graphics_settings">
        <CheckBoxPreference android:persistent="true" android:title="@string/prefs_enable_recorrection" android:key="recorrection_enabled" android:summary="@string/prefs_enable_recorrection_summary" android:defaultValue="@bool/default_recorrection_enabled" />
        <CheckBoxPreference android:persistent="true" android:title="@string/title_fullscreen_override" android:key="fullscreen_override" android:defaultValue="@bool/default_fullscreen_override" android:summaryOn="@string/summary_fullscreen_override_true" android:summaryOff="@string/summary_fullscreen_override_false" />
        <CheckBoxPreference android:persistent="true" android:title="@string/title_force_keyboard_on" android:key="force_keyboard_on" android:defaultValue="@bool/default_force_keyboard_on" android:summaryOn="@string/summary_force_keyboard_on_true" android:summaryOff="@string/summary_force_keyboard_on_false" />
        <CheckBoxPreference android:persistent="true" android:title="@string/title_keyboard_notification" android:key="keyboard_notification" android:defaultValue="@bool/default_keyboard_notification" android:summaryOn="@string/summary_keyboard_notification_true" android:summaryOff="@string/summary_keyboard_notification_false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_application_category" android:key="application_settings">
        <CheckBoxPreference android:persistent="true" android:title="@string/title_connectbot_tab_hack" android:key="connectbot_tab_hack" android:defaultValue="true" android:summaryOn="@string/summary_connectbot_tab_hack_true" android:summaryOff="@string/summary_connectbot_tab_hack_false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_debugging" android:key="debugging">
        <CheckBoxPreference android:persistent="true" android:title="@string/title_touch_pos" android:key="pref_touch_pos" android:defaultValue="false" android:summaryOn="@string/summary_touch_pos_true" android:summaryOff="@string/summary_touch_pos_false" />
        <Preference android:title="@string/title_input_connection_details" android:key="input_connection_info" />
        <Preference android:title="@string/title_version" android:key="label_version" android:summary="@string/auto_version" />
    </PreferenceCategory>
</PreferenceScreen>