<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/pref_screen_view_title" android:key="prefs_view"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:hk="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/pref_screen_view_title" android:key="graphics_settings">
        <org.pocketworkstation.pckeyboard.AutoSummaryListPreference android:persistent="true" android:entries="@array/hint_modes" android:title="@string/title_hint_mode" android:key="pref_hint_mode" android:defaultValue="@string/default_hint_mode" android:entryValues="@array/hint_modes_values" />
        <org.pocketworkstation.pckeyboard.SeekBarPreferenceString android:persistent="true" android:title="@string/title_label_scale" android:key="pref_label_scale_v2" android:defaultValue="1.0" hk:asPercent="true" hk:logScale="true" hk:maxValue="2.0" hk:minValue="0.5" />
        <org.pocketworkstation.pckeyboard.SeekBarPreferenceString android:persistent="true" android:title="@string/title_candidate_scale" android:key="pref_candidate_scale" android:defaultValue="1.0" hk:asPercent="true" hk:logScale="true" hk:maxValue="8.0" hk:minValue="0.5" />
        <org.pocketworkstation.pckeyboard.SeekBarPreferenceString android:persistent="true" android:title="@string/title_top_row_scale" android:key="pref_top_row_scale" android:defaultValue="1.0" hk:asPercent="true" hk:maxValue="1.0" hk:minValue="0.5" hk:step="0.05" />
        <org.pocketworkstation.pckeyboard.AutoSummaryListPreference android:persistent="true" android:entries="@array/keyboard_layout_modes" android:title="@string/keyboard_layout" android:key="pref_keyboard_layout" android:defaultValue="0" android:entryValues="@array/keyboard_layout_modes_values" />
        <org.pocketworkstation.pckeyboard.AutoSummaryListPreference android:persistent="true" android:entries="@array/render_mode_entries" android:title="@string/title_render_mode" android:key="pref_render_mode" android:defaultValue="@string/default_render_mode" android:entryValues="@array/render_mode_values" />
    </PreferenceCategory>
</PreferenceScreen>