<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:id="@id/main_linear1" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TableRow>
            <Button android:id="@id/main_setup_btn_configure_imes" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_setup_configure_imes" />
            <Button android:id="@id/main_setup_btn_input_lang" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_setup_input_lang" />
        </TableRow>
        <TableRow>
            <Button android:id="@id/main_setup_btn_set_ime" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_setup_set_ime" />
            <Button android:id="@id/main_setup_btn_get_dicts" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_setup_get_dicts" />
        </TableRow>
        <TableRow>
            <Button android:id="@id/main_setup_btn_settings" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_setup_settings" />
            <EditText android:gravity="center" android:id="@id/main_setup_edit_test" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/main_setup_test" />
        </TableRow>
    </TableLayout>
    <TextView android:id="@id/main_description" android:layout_width="wrap_content" android:layout_height="wrap_content" />
</LinearLayout>